# skellyclicker

./: .gitignore  README.md  body_tracked_points.json  eyecam_tracked_points.json  noeyecam_tracked_points.json  old_pupil_tracked_points.json  pyproject.toml  skellyclicker_env.yaml  toy_tracked_points.json  tracked_points.json
skellyclicker/: __init__.py  __main__.py  __old_main__.py  skellyclicker_types.py  video_viewer.py
skellyclicker-ui/: electron-builder.json  index.html  package.json  vite.config.ts
skellyclicker-ui/src/: App.tsx
skellyclicker/api/: routers.py
skellyclicker/app/: app_lifespan.py  app_setup.py  app_state.py  app_state_singleton.py  create_app.py  skellyclicker_app.py
skellyclicker/assets/: logo_paths.py
skellyclicker/connections/: keypoint_moseq_loaders.py
skellyclicker/core/: create_dlc_project_data.py  data_handler.py  image_annotator.py  video_handler.py  video_models.py  video_viewer.py
skellyclicker/helpers/: create_dlc_project_data.py  data_frame_handler.py  data_handler.py  image_annotator.py  video_handler.py  video_models.py
skellyclicker/models/: skellyclicker_app_state_model.py  skellyclicker_types.py  video_models.py
skellyclicker/scripts/: add_timestamps_to_machine_labels.py  calculate_mean.py  flip_pupil_labelled_data.py  flip_video.py  plot_from_machine_labels.py  process_folder.py  process_recording.py  synchronize_eye_videos.py  tidy_head_data.py  view_labelled_data.py
skellyclicker/system/: files_and_folder_names.py
skellyclicker/tk_ui/: skellyclicker_ui.py
skellyclicker/ui/: skellyclicker_ui.py
(+106 files in other folders)
