[project]
name = "skellyclicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorbrewer>=0.3",
    "deeplabcut==3.0.0rc7",
    "fastapi[standard]==0.115.12",
    "numpy==1.26.2",
    "opencv-contrib-python>=4.8.1.78",
    "pandas==2.1.4",
    "pillow>=11.1.0",
    "pydantic==2.11.0",
    "pyyaml>=6.0.2",
    "uvicorn==0.34.2",
]
